--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,6 +55,13 @@
         </div>
 
     </div>
+    <% users.forEach(function (user) { %>
+        <li>
+            <h1>
+                <%= user.name %>
+            </h1>
+        </li>
+    <% }) %>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
