fix users list in profile.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -57,10 +57,14 @@
     </div>
     <% users.forEach(function (user) { %>
         <li>
-            <h1>
-                <%= user.name %>
-            </h1>
+            <p>
+                <%= user._id %>
+            </p>
+            <p>
+                <%= user.local.email %>
+            </p>
         </li>
+        
     <% }) %>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
