--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,9 +20,11 @@
                     <a class="navbar-brand" href="#">Tu casa</a>
                 </div>
                 <ul class="nav navbar-nav" id="menu">
+                        <% if(user.local.role=="ROLE_ADMIN") { %>
                     <li>
                         <a href="#">Admin</a>
                     </li>
+                    <% } %>
                     <li>
                         <a href="#">Luces</a>
                     </li>
@@ -51,14 +53,22 @@
         </div>
 
         <p id="prueba"></p>
-        <% if(true) { %>
+        <!-- el if true es pq la comprobación del admin no estaba disponible-->
+        <% if(user.local.role=="ROLE_ADMIN") { %>
             <div class="row section" id="Admin">
+                <div class="row">
+                    <h1>Usuario</h1>
+                    <form action="/signup" method="GET">
+                        <button type="submit" id="add" class="pull-right ">
+                            <span class="fa fa-plus-circle"></span>
+                        </button>
+                    </form>
+                </div>
                 <div clas="row ">
                     <div clas="well col-md-6">
                         <table class="table table-striped" style="width:70%">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th>Name</th>
                                     <th>Email</th>
                                     <th>Rol</th>
                                     <th>Delete</th>
@@ -68,19 +78,18 @@
                                 <% users.forEach((user) => { %>
                                     <tr>
                                         <td>
-                                            <%= user.local.name %>
-                                        </td>
-                                        <td>
                                             <%= user.local.email %>
                                         </td>
                                         <td>
                                             <%= user.local.role %>
-                                        </td>   
+                                        </td>
                                         <td>
                                             <form action="/delete" method="POST">
                                                 <input class="hidden" value="<%= user._id %>">
-                                            <button type="submit" id="delete"><span class="fa fa-trash-alt"></span></button>
-                                        </form>
+                                                <button type="submit" id="delete">
+                                                    <span class="fa fa-trash"></span>
+                                                </button>
+                                            </form>
                                         </td>
                                     </tr>
 
@@ -117,7 +126,7 @@
     <script>
 
         $("#menu a").click(function () {
-            showSection(this.innerHTML); 
+            showSection(this.innerHTML);
         });
         function showSection(valor) {
             var clases = document.getElementsByClassName("section");
