--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +18,7 @@
 
         <div class="col-sm-6 col-sm-offset-3">
 
-            <h1><span class="fa fa-user-plus"></span> Signup</h1>
+            <h1><span class="fa fa-user-plus"></span> Add user</h1>
 
             <!-- show any messages that come back with authentication -->
             <% if (message.length > 0) { %>
@@ -30,20 +29,15 @@
             <form action="/signup" method="post">
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" name="email">
+                    <input type="email" class="form-control" name="email">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
                     <input type="password" class="form-control" name="password">
                 </div>
             
-                <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+                <button type="submit" class="btn btn-success btn-lg">Create</button>
             </form>
-            
-            <hr>
-            
-            <p>Already have an account? <a href="/login">Login</a></p>
-            <p>Or go <a href="/">home</a>.</p>
         </div>    
     </div>
 </body>
