--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -115,7 +115,8 @@
                     <p>sección livestream</p>
                 </div>
                 <div class="row section" id="Registro">
-                    <p>sección registro</p>
+                    <div class="col-md-offset-2 col-md-8 well" id="logRoom">
+                        </div>
                 </div>
 
 
