Fix profile.ejs script

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -125,7 +125,7 @@
     <script src="./assets/scripts/script.js"></script>
     <script>
 
-        $("#menu a").click(() => {
+        $("#menu a").click(function() {
             showSection(this.innerHTML);
         });
         function showSection(valor) {
