--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -104,11 +104,14 @@
             <div class="row section" id="Luces" >
                 <div class="portrait">
                     <img src="/assets/images/classroom.jpg" class="image">
-                    <button id="0" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz</button>
-                    <button id="1" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Proyector</button>
-                    <button id="2" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Pantalla</button>
+                    <button id="0" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz1</button>
+                    <button id="1" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz2</button>
+                    <button id="2" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz3</button>
                 </div>
                 <p>sección luces</p>
+                
+                <input id="colorpicker" type="color" value="#ff0000">
+                <button class="RGBcontrol"  type="submit">enviar</button>
             </div>
             <div class="row section" id="LiveStream">
                 <p>sección livestream</p>
