Change colorPicker event to onChange

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -110,8 +110,7 @@
                 </div>
                 <p>sección luces</p>
                 
-                <input id="colorpicker" type="color" value="#ff0000">
-                <button class="RGBcontrol"  type="submit">enviar</button>
+                <input id="colorPicker" type="color" value="#ff0000">
             </div>
             <div class="row section" id="LiveStream">
                 <p>sección livestream</p>
