--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -110,7 +110,7 @@
                 </div>
                 <p>sección luces</p>
                 
-                <input id="colorPicker" type="color" value="#ff0000">
+                <input class="colorpicker"id="CP1" type="color" value="#ffffff">
             </div>
             <div class="row section" id="LiveStream">
                 <p>sección livestream</p>
