temperature sensor functionality, log back on

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -102,15 +102,20 @@
         <% } %>
            
             <div class="row section" id="Luces" >
-                <div class="portrait">
+                    <div class="col-md-4">
+                            <p>sección luces</p>
+                        
+                            <input class="colorPicker" id="CP1" type="color" value="#ffffff">
+                            <div id="temp"></div>
+                        </div>
+                <div class="portrait col-md-8">
                     <img src="/assets/images/classroom.jpg" class="image">
                     <button id="0" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Luz1</button>
                     <button id="1" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz2</button>
                     <button id="2" type="button" class="btn btn-primary lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">luz3</button>
                 </div>
-                <p>sección luces</p>
                 
-                <input class="colorPicker" id="CP1" type="color" value="#ffffff">
+                
             </div>
             <div class="row section" id="LiveStream">
                 <p>sección livestream</p>
