--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -106,7 +106,10 @@
                             <p>sección luces</p>
                         
                             <input class="colorPicker" id="CP1" type="color" value="#ffffff">
-                            <div id="temp"></div>
+                            <div id="temp">
+                                
+                            </div>
+                            <button id="3" type="button" class="btn btn-outline-info lightBtn" data-toggle="button" aria-pressed="false" autocomplete="off">Aire acondicionado</button>
                         </div>
                 <div class="portrait col-md-8">
                     <img src="/assets/images/classroom.jpg" class="image">
